--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -14,9 +13,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Frontend Mentor | Calculator app</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <title>Calculator app</title>
     <style>
       .attribution {
         font-size: 1rem;
@@ -33,7 +30,7 @@
   <body>
     <div class="calculator">
       <div class="calculator__header">
-        <div class="calculator__header__title">calc</div>
+        <div class="calculator__header__title">Calculator App by Sandip</div>
         <div class="calculator__header__toggle-switch">
           <span class="calculator__header__toggle-switch__title">THEME</span>
           <div class="calculator__header-toggle-switch__switcher switcher">
@@ -83,17 +80,6 @@
       </div>
     </div>
 
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        href="https://www.frontendmentor.io/profile/hebaghazali"
-        target="_blank"
-        >Heba Ghazaly</a
-      >.
-    </div> -->
 
     <script src="scripts/switcher.js"></script>
     <script src="scripts/script.js"></script>
