--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class="calculator">
       <div class="calculator__header">
-        <div class="calculator__header__title">Calculator App by Sandip</div>
+        <div class="calculator__header__title">Calculator by Sandip</div>
         <div class="calculator__header__toggle-switch">
           <span class="calculator__header__toggle-switch__title">THEME</span>
           <div class="calculator__header-toggle-switch__switcher switcher">
