--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <button class="decimal" data-number=".">.</button>
         <button data-number>0</button>
         <button class="operator" data-operator="/">/</button>
-        <button class="operator" data-operator="*">&times;</button>
+        <button class="operator" data-operator="*">*</button>
         <button class="reset" id="reset-btn" data-reset>RESET</button>
         <button class="equal-sign operator" data-equals="=">=</button>
       </div>
